# popgym-arcade

./: .gitattributes  .gitignore  LICENSE  README.md  analysis.py  bash.sh  bibtex.txt  hpc.sh  hpc_sweep.sh  hpc_sweep_a100.sh  hpc_sweep_restart.sh  index.html  irun.sh  mingru_sweep.yaml  obs_test.ipynb  obsgap.sh  parameter_count.ipynb  play.py  pyproject.toml  query_sweep.py  requirements.txt  setup.py  sweep.py  sweep_attention_rope_minesweeper_battleship.yaml  sweep_lru_minesweeper_battleship.yaml  sweep_mingru_minesweeper_battleship.yaml  sweep_mlp_minesweeper_battleship.yaml
.github/workflows/: python-publish.yml  python_app.yaml  run-tests.yaml
docs/: README.md  experiments.md  memory_introspection.md  quickstart.md
plotting/: Atari_FPS_test.py  MinAtar_popgym_FPS_test.py  PArcade_gymnax_FPS_test.py  analysis.py  analysis_plot.ipynb  churn.py  computeFPS.py  density_analysis_ppo.py  density_analysis_pqn.py  download_csv.py  evaluatepolicy.ipynb  fps.sh  generate_analysis_data.py  heatmap.py  memorytools.sh  noiseva.py  pixel_vis_ppo.py  pixel_vis_pqn.py  plot_density_by_env_models.py  plot_density_summary.py  plot_fps.py  plot_saliency_summary.py  plot_separate_returns_curve.py  plot_test.ipynb  plot_twins_returns_curve.py  plotlib.py  plottable.py  recall_density.py  return_gap_bias.py  rlcgrad.py  run_multi_seed_analysis.py  utils.py
popgym_arcade/: play.py  registration.py  train.py  vlm_play.py  wrappers.py
popgym_arcade/baselines/: dqn.py  dqn_rnn.py  ppo.py  ppo_rnn.py  pqn.py  pqn_rnn.py  trick_pqn_rnn.py  (+1 more)
tests/: test_integration.py  test_train.py
(+51 files in other folders)
